--- a/src/components/video-thumbnail.css
+++ b/src/components/video-thumbnail.css
@@ -1,10 +1,10 @@
 .snapshot-generator {
     display: block;
-    height: 1px;
+    height: 100%;
     left: 0;
     object-fit: contain;
     position: fixed;
     top: 0;
-    width: 1px;
+    width: 100%;
     z-index: -1;
 }
